Addition of BoundingBoxWorkflow
BoundingBoxWorkflow compiles but needs to be tested.